# cw3

./: .coverage  .gitignore  README.md  funcs.py  main.py  pyproject.toml
tests/: fixture.py  test_funcs.py
