[tool.poetry]
name = "cw3"
version = "0.1.0"
description = ""
authors = ["Kristina Shardakova <krvermont@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
coverage = "^7.5.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
